Add DFS problems + tests