@@ -19,14 +19,14 @@ class LeetCodeLinkedListTest {
 		List<Integer> firstTest = new ArrayList<>(Arrays.asList(1, 2));
 		List<Integer> secondTest = new ArrayList<>();
 
-		assertNull(createListNodeFromLinkedList(secondTest));
-		assertEquals(new ListNode(1, new ListNode(2, null)), createListNodeFromLinkedList(firstTest));
+		assertNull(createListNodeFromList(secondTest));
+		assertEquals(new ListNode(1, new ListNode(2, null)), createListNodeFromList(firstTest));
 	}
 
 	@Test
 	void testReverseLinkedList() {
-		ListNode firstTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 2)));
-		ListNode secondTest = createListNodeFromLinkedList(new ArrayList<>());
+		ListNode firstTest = createListNodeFromList(new ArrayList<>(Arrays.asList(1, 2)));
+		ListNode secondTest = createListNodeFromList(new ArrayList<>());
 
 		assertEquals(new ListNode(2, new ListNode(1, null)), leetCode.reverseList(firstTest));
 		assertNull(leetCode.reverseList(secondTest));
@@ -34,49 +34,49 @@ class LeetCodeLinkedListTest {
 
 	@Test
 	void testDeleteMiddle() {
-		ListNode firstTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 3, 4, 7, 1, 2, 6)));
-		ListNode secondTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 2, 3, 4)));
-		ListNode thirdTest = createListNodeFromLinkedList(new ArrayList<>());
-		ListNode forthTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(2, 1)));
-		ListNode fifthTest = createListNodeFromLinkedList(new ArrayList<>(List.of(1)));
+		ListNode firstTest = createListNodeFromList(new ArrayList<>(Arrays.asList(1, 3, 4, 7, 1, 2, 6)));
+		ListNode secondTest = createListNodeFromList(new ArrayList<>(Arrays.asList(1, 2, 3, 4)));
+		ListNode thirdTest = createListNodeFromList(new ArrayList<>());
+		ListNode forthTest = createListNodeFromList(new ArrayList<>(Arrays.asList(2, 1)));
+		ListNode fifthTest = createListNodeFromList(new ArrayList<>(List.of(1)));
 
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 3, 4, 1, 2, 6))),
+		assertEquals(createListNodeFromList(new ArrayList<>(Arrays.asList(1, 3, 4, 1, 2, 6))),
 				leetCode.deleteMiddle(firstTest));
-		assertEquals(createListNodeFromLinkedList((new ArrayList<>(List.of(1, 2, 4)))),
+		assertEquals(createListNodeFromList((new ArrayList<>(List.of(1, 2, 4)))),
 				leetCode.deleteMiddle(secondTest));
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>()), leetCode.deleteMiddle(thirdTest));
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>(List.of(2))), leetCode.deleteMiddle(forthTest));
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>()), leetCode.deleteMiddle(fifthTest));
+		assertEquals(createListNodeFromList(new ArrayList<>()), leetCode.deleteMiddle(thirdTest));
+		assertEquals(createListNodeFromList(new ArrayList<>(List.of(2))), leetCode.deleteMiddle(forthTest));
+		assertEquals(createListNodeFromList(new ArrayList<>()), leetCode.deleteMiddle(fifthTest));
 	}
 
 	@Test
 	void testOddEvenList() {
-		ListNode firstTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5)));
-		ListNode secondTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(2, 1, 3, 5, 6, 4, 7)));
-		ListNode thirdTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 2, 3, 4)));
+		ListNode firstTest = createListNodeFromList(new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5)));
+		ListNode secondTest = createListNodeFromList(new ArrayList<>(Arrays.asList(2, 1, 3, 5, 6, 4, 7)));
+		ListNode thirdTest = createListNodeFromList(new ArrayList<>(Arrays.asList(1, 2, 3, 4)));
 
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>(List.of(1, 3, 5, 2, 4))),
+		assertEquals(createListNodeFromList(new ArrayList<>(List.of(1, 3, 5, 2, 4))),
 				leetCode.oddEvenList(firstTest));
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>(List.of(2, 3, 6, 7, 1, 5, 4))),
+		assertEquals(createListNodeFromList(new ArrayList<>(List.of(2, 3, 6, 7, 1, 5, 4))),
 				leetCode.oddEvenList(secondTest));
-		assertEquals(createListNodeFromLinkedList(new ArrayList<>(List.of(1, 3, 2, 4))),
+		assertEquals(createListNodeFromList(new ArrayList<>(List.of(1, 3, 2, 4))),
 				leetCode.oddEvenList(thirdTest));
 	}
 
 	@Test
 	void testPairSum() {
-		ListNode firstTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(5, 4, 2, 1)));
-		ListNode secondTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(4, 2, 2, 3)));
-		ListNode thirdTest = createListNodeFromLinkedList(new ArrayList<>(Arrays.asList(1, 100000)));
+		ListNode firstTest = createListNodeFromList(new ArrayList<>(Arrays.asList(5, 4, 2, 1)));
+		ListNode secondTest = createListNodeFromList(new ArrayList<>(Arrays.asList(4, 2, 2, 3)));
+		ListNode thirdTest = createListNodeFromList(new ArrayList<>(Arrays.asList(1, 100000)));
 
 		assertEquals(6, leetCode.pairSum(firstTest));
 		assertEquals(7, leetCode.pairSum(secondTest));
 		assertEquals(100001, leetCode.pairSum(thirdTest));
 	}
 
-	private ListNode createListNodeFromLinkedList(List<Integer> linkedList) {
-		return linkedList.isEmpty()
+	private ListNode createListNodeFromList(List<Integer> list) {
+		return list.isEmpty()
 				? null
-				: new ListNode(linkedList.removeFirst(), createListNodeFromLinkedList(linkedList));
+				: new ListNode(list.removeFirst(), createListNodeFromList(list));
 	}
 }
